# BiiGOptitrack

./: .gitattributes  CMakeLists.txt  README.md  _bii_g_optitrack_control___export_8h.html  _bii_g_optitrack_control___export_8h_source.html  _bii_g_optitrack_control_config_8h.html  _bii_g_optitrack_control_config_8h_source.html  _bii_g_optitrack_control_public_header_8h.html  _bii_g_optitrack_control_public_header_8h_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _extra_definitions_8h.html  _extra_definitions_8h_source.html  _optitrack_macros_8h.html  _optitrack_macros_8h_source.html  _optitrack_tool_8cpp.html  _optitrack_tool_8h.html  _optitrack_tool_8h_source.html  _optitrack_tracker_8cpp.html  _optitrack_tracker_8h.html  _optitrack_tracker_8h_source.html  annotated.html  class_optitrack_1_1_optitrack_tool-members.html  class_optitrack_1_1_optitrack_tool.html  class_optitrack_1_1_optitrack_tracker-members.html  class_optitrack_1_1_optitrack_tracker.html  classes.html  classitk_1_1_image_i_o_factory_register_manager-members.html  classitk_1_1_image_i_o_factory_register_manager.html  classitk_1_1_transform_i_o_factory_register_manager-members.html  classitk_1_1_transform_i_o_factory_register_manager.html  dir_158d3f6614dc7eef1ece5717d2942b95.html  dir_17189a94d615399d35217e4eed078c6d.html  dir_249dc3bc66d47e60c74d921f2ebb2793.html  dir_2743ed7460a35d1b741ae263994df48f.html  dir_68e9074956ab6767d9d3494292fb07a6.html  dir_afe55c8c0def80901ea201c3de1add73.html  dir_fbd998c417a1c749e84684921ada9426.html  feature__tests_8cxx.html  files.html  functions.html  (+21 more)
BiiGOptitrackControl/: CMakeLists.txt
BiiGOptitrackControl/CMake/: Config.cmake.in  Config.h.in  ConfigInstall.cmake.in  TemplateCreator-external.cmake
BiiGOptitrackControl/inc/: BiiGOptitrackControlPublicHeader.h  ExtraDefinitions.h  OptitrackTool.h  OptitrackTracker.h
BiiGOptitrackControl/src/: OptitrackTool.cpp  OptitrackTracker.cpp
CMake/: Config.cmake.in  ConfigInstall.cmake.in  FilesToBeCopiedDuringInstall.cmake.in  FindCMakeAll.cmake
CalibrationValidation/: CMakeLists.txt
CalibrationValidation/CMake/: Config.cmake.in
CalibrationValidation/doc/: Doxyfile.in
CalibrationValidation/inc/: CalibrationValidation.h
CalibrationValidation/src/: source.cpp
NPTrackingTools/: CMakeLists.txt
NPTrackingTools/CMake/: Config.cmake.in  Config.h.in  ConfigureTrackingToolsAPI.cmake  FilesToBeCopiedDuringInstall.cmake.in  FindTrackingToolsAPI.cmake  NPTrackingToolsTargets.cmake.in  TemplateCreator-internal.cmake
NPTrackingTools/inc/: NPTrackingTools.h
NPTrackingTools/src/: NPTrackingTools.cpp
OptitrackClient/: CMakeLists.txt
OptitrackClient/CMake/: Config.h.in  ConfigInstall.cmake.in  CopyDll.cmake
OptitrackClient/inc/: OptitrackClient.h
OptitrackServer/: CMakeLists.txt
OptitrackServer/doc/: ConfigureDocumentation.cmake
OptitrackServer/inc/: OptitrackServer.h
Projects/: BiiGOptitrackControl.cmake  CalibrationValidation.cmake  Git.cmake  IGTLinkPython.cmake  ITK.cmake  NPTrackingTools.cmake  OpenIGTLink.cmake  OptitrackClient.cmake  OptitrackServer.cmake  tinyxml2.cmake
TestOptitrack/: CMakeLists.txt
TestOptitrack/CMake/: Config.h.in
TestOptitrack/inc/: TestOptitrack.h
TestOptitrack/src/: TestOptitrack.cpp
install/: PackageInfo_info.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  (+19 more)
